--- a/styles/base/_fonts.scss
+++ b/styles/base/_fonts.scss
@@ -1,4 +1,4 @@
-// scss-lint:disabled all
+// sass-lint:disable-all
 @font-face {
   font-family: 'tomorrow';
   src: url('./assets/fonts/tomorrow.eot');
