--- a/styles/constants/_typography.scss
+++ b/styles/constants/_typography.scss
@@ -1,5 +1,5 @@
 $font-main: 'Noto Sans KR', sans-serif;
-$fon-price: 'Tahoma', sans-serif;
+$font-price: 'Tahoma', sans-serif;
 
 $font-size-12: 12px;
 $line-hight-12: 16px;
